# TimbrosaField

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
src/my_app/: __init__.py  ableton_generator_optimized.py  analytics_dashboard.py  app_config.py  audio_player.py  batch_tageditor.py  cuepoints_manager.py  dialog_manager.py  export_manager.py  file_manager.py  global_manager.py  main.py  menu_system.py  settings_manager.py  tag_completer.py  tag_definitions.py  ui_components.py  user_config_manager.py  wav_analyzer.py  wav_save_manager.py  wav_save_strategies.py  wav_viewer.py
